# Supply-Demand-Flows

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: alerts-after-data.yml  baker-hughes.yml  eia-lng.yml  eia-storage.yml  eia-supply.yml  gie-storage.yml  publish-dashboard.yml
data/: sent_alerts.json
data/curated/: baker_hughes_weekly.parquet  eia_lng.parquet  eia_lng_exports.parquet  eia_storage.parquet  eia_supply.parquet  gie_agsi.parquet
data/health/: baker_hughes_rigs.json  baker_hughes_rigs.prev.json  eia_lng.json  eia_storage.json  eia_storage.prev.json  eia_supply.json  eia_supply.prev.json  gie_agsi.json
derived/: __init__.py
docs/: 404.html  index.html  robots.txt
docs/css/: base.css  components.css  layout.css  tokens.css
docs/data/: bundle.46e85fea.json  bundle.73b72bcd.json  bundle.cdd0ab5f.json  bundle.de59fdb2.json  bundle.eecb0c53.json  bundle.json  manifest.json
docs/js/: main.js
publishers/: __init__.py  alerts.py  events.py  export_dashboard_json.py
schemas/: assets.yaml
scrapers/ais/: __init__.py
scrapers/baker_hughes/: __init__.py  rigs.py
scrapers/base/: __init__.py  errors.py  health_writer.py  http_client.py  playwright_client.py  safe_writer.py
scrapers/cenagas/: __init__.py
tests/: conftest.py  test_alerts.py  test_baker_hughes_scraper.py  test_baker_hughes_transformer.py  test_eia_client.py  test_eia_lng_scraper.py  test_eia_lng_transformer.py  test_eia_storage_scraper.py  test_eia_storage_transformer.py  test_eia_supply_scraper.py  test_events.py  test_export_dashboard.py  test_gie_agsi_scraper.py  test_gie_agsi_transformer.py  test_health_writer.py  test_http_client.py  test_safe_writer.py  test_state_preserving_writer.py
transformers/: __init__.py  baker_hughes.py  eia_lng_exports.py  eia_storage.py  eia_supply.py  errors.py  gie_agsi.py
validators/: __init__.py
(+32 files in other folders)
