[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scrapers*", "transformers*", "derived*", "publishers*", "validators*"]

[project]
name = "blue-tide"
version = "0.1.0"
description = "The physical observatory of North American natural gas — a visualization-first, institutional-grade, open-source physical-market platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yieldchaser" }]

dependencies = [
    "beautifulsoup4==4.12.3",
    # curl_cffi wraps libcurl with browser TLS fingerprint impersonation.
    # Used by scrapers/baker_hughes/rigs.py because Baker Hughes' Cloudflare/Drupal
    # CDN throttles Python's OpenSSL-based HTTP libraries (httpx, requests) via
    # JA3/JA4 fingerprinting. curl_cffi with impersonate="chrome124" passes through.
    # Do not use for other scrapers - httpx remains canonical for speed.
    "curl_cffi==0.7.4",
    "httpx==0.27.2",
    "lxml==5.3.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "playwright==1.48.0",
    "pyarrow==18.0.0",
    "pydantic==2.9.2",
    "python-dateutil==2.9.0",
    "python-dotenv==1.0.1",
    "pyxlsb==1.0.10",
    "pyyaml==6.0.2",
    "websockets==13.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.7.0",
    "mypy==1.13.0",
    "types-pyyaml==6.0.12.20240917",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RET"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
